# Breakout-Game

./: main.cpp  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/breakout_game/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Camera.h  Game.cpp  Game.h  Game_withsinglecallfor_bricks.cpp  Renderer.cpp  Renderer.h  Renderer_withsinglecall_for_bricks.cpp  Texture.cpp  Texture.h  logging.h  main.cpp  stb_rect_pack.h  stb_truetype.h
app/src/main/java/com/example/breakout_game/: MainActivity.kt
app/src/main/java/com/example/breakoutgame/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/breakout_game/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
